[gd_scene load_steps=36 format=3 uid="uid://dgk7l5018f5dd"]

[ext_resource type="PackedScene" uid="uid://c0fep3mm61wnp" path="res://scenes/level.tscn" id="1_f46va"]
[ext_resource type="Script" path="res://scenes/intro/intro.gd" id="2_2ghu8"]
[ext_resource type="Texture2D" uid="uid://ck2al55pbkmlp" path="res://scenes/city/city_a/bg0.png" id="3_5xqde"]
[ext_resource type="Texture2D" uid="uid://qycd1ll6o3vh" path="res://scenes/city/city_a/bg1.png" id="4_xuap4"]
[ext_resource type="Texture2D" uid="uid://pyxig2cstd2e" path="res://scenes/city/city_a/bg2.png" id="5_gfh3j"]
[ext_resource type="Texture2D" uid="uid://dbsu7b815ae3d" path="res://scenes/intro/car.png" id="6_kxgnn"]
[ext_resource type="Texture2D" uid="uid://cqdxaewsfxs0k" path="res://scenes/intro/head.png" id="7_vp835"]
[ext_resource type="Texture2D" uid="uid://p3btdwepwdu8" path="res://scenes/city/city_a/car_light.png" id="8_7wkh6"]
[ext_resource type="PackedScene" path="res://entities/player/player_light.tscn" id="9_7jiup"]
[ext_resource type="Texture2D" uid="uid://bjkl2f0d50jd1" path="res://scenes/intro/phone.png" id="10_unopm"]
[ext_resource type="Texture2D" uid="uid://bnwqufd8566eo" path="res://scenes/intro/road.png" id="11_5u0y3"]
[ext_resource type="Texture2D" uid="uid://cra80krl6cvc6" path="res://scenes/intro/title.png" id="12_uylm5"]
[ext_resource type="AudioStream" uid="uid://cbsmudertqtbl" path="res://scenes/intro/cellphone.mp3" id="13_j7ucp"]
[ext_resource type="AudioStream" uid="uid://btysa225vnjy5" path="res://scenes/intro/cellphone_answer.mp3" id="14_kh8j2"]
[ext_resource type="AudioStream" uid="uid://c5tnmoabogdvh" path="res://scenes/intro/cellphone_hangup.mp3" id="15_rbalc"]
[ext_resource type="AudioStream" uid="uid://cwnqn4tef13jl" path="res://scenes/intro/road.mp3" id="17_ccg6h"]
[ext_resource type="AudioStream" uid="uid://kjqpyanx2lmx" path="res://scenes/intro/engine.mp3" id="18_5cawo"]
[ext_resource type="Script" path="res://entities/animator/animator.gd" id="21_u3b2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_21l4n"]
atlas = ExtResource("6_kxgnn")
region = Rect2(0, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlgpm"]
atlas = ExtResource("6_kxgnn")
region = Rect2(52, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb2b8"]
atlas = ExtResource("6_kxgnn")
region = Rect2(104, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_js2hu"]
atlas = ExtResource("6_kxgnn")
region = Rect2(156, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2affu"]
atlas = ExtResource("6_kxgnn")
region = Rect2(208, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3oqs"]
atlas = ExtResource("6_kxgnn")
region = Rect2(260, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m08dj"]
atlas = ExtResource("6_kxgnn")
region = Rect2(312, 0, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3t3q"]
atlas = ExtResource("6_kxgnn")
region = Rect2(364, 0, 52, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jebpq"]
animations = [{
"frames": [],
"loop": true,
"name": &"",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21l4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlgpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb2b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js2hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2affu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3oqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m08dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3t3q")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="22"]
resource_name = "ride"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Demo/Road:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-4, 0), Vector2(-8, 0), Vector2(-12, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Demo/Car/CarLight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(24, 11), Vector2(24, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Demo/Car/Phone:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(2, 4), Vector2(2, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cyxue"]
_data = {
"ride": SubResource("22")
}

[sub_resource type="Animation" id="23"]
resource_name = "ride"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Demo/Car/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 2, 1, 0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlf1o"]
_data = {
"ride": SubResource("23")
}

[sub_resource type="Animation" id="24"]
resource_name = "sway"
length = 7.5
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Demo/Car:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 4.5, 7, 7.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(53, -39), Vector2(48, -39), Vector2(56, -39), Vector2(53, -39), Vector2(53, -39)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fqm3t"]
_data = {
"sway": SubResource("24")
}

[sub_resource type="Animation" id="32"]
resource_name = "start"
length = 11.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(9.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"load_first_level"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1.51572, 1),
"update": 0,
"values": [Vector2(128, -104), Vector2(128, -178)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Demo/Car/Phone:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5, 7.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Demo/Car/Phone:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5.1, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 2]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CutsceneAnimator")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 6, 8.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [2.0, 0.5, Vector2(50, -20)],
"method": &"zoom_in"
}, {
"args": ["boss_fire"],
"method": &"play_dialogue_sequence"
}, {
"args": [1.0],
"method": &"fade_out"
}]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CellphoneRing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 5.0,
"start_offset": 0.0,
"stream": ExtResource("13_j7ucp")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_kh8j2")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_rbalc")
}],
"times": PackedFloat32Array(0, 5.2, 6.1)
}
tracks/5/use_blend = true
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RoadSound:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 8.5, 11),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -20.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EngineSound:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 8.5, 11),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-10.0, -10.0, -30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_plauh"]
_data = {
"start": SubResource("32")
}

[node name="Intro" instance=ExtResource("1_f46va")]
script = ExtResource("2_2ghu8")

[node name="Camera" parent="." index="0"]
offset = Vector2(128, -72)

[node name="Demo" type="Node2D" parent="." index="1"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Demo" index="0"]

[node name="Sky" type="ParallaxLayer" parent="Demo/ParallaxBackground" index="0"]
z_index = -100
motion_mirroring = Vector2(256, 144)

[node name="Sprite2D" type="Sprite2D" parent="Demo/ParallaxBackground/Sky" index="0"]
texture_repeat = 2
texture = ExtResource("3_5xqde")
centered = false

[node name="City" type="ParallaxLayer" parent="Demo/ParallaxBackground" index="1"]
z_index = -99
motion_scale = Vector2(0, 0)
motion_offset = Vector2(-133, -70)

[node name="Sprite2D" type="Sprite2D" parent="Demo/ParallaxBackground/City" index="0"]
texture_repeat = 2
texture = ExtResource("4_xuap4")
centered = false

[node name="Buildings" type="ParallaxLayer" parent="Demo/ParallaxBackground" index="2"]
z_index = -98
motion_scale = Vector2(0.8, 0.8)
motion_offset = Vector2(0, -400)
motion_mirroring = Vector2(1000, 0)

[node name="Sprite2D" type="Sprite2D" parent="Demo/ParallaxBackground/Buildings" index="0"]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
texture_repeat = 2
texture = ExtResource("5_gfh3j")
centered = false

[node name="Car" type="AnimatedSprite2D" parent="Demo" index="1"]
z_index = -2
position = Vector2(53, -39)
sprite_frames = SubResource("SpriteFrames_jebpq")
frame_progress = 0.103691

[node name="Head" type="Sprite2D" parent="Demo/Car" index="0"]
z_index = 2
position = Vector2(5, 3)
texture = ExtResource("7_vp835")
offset = Vector2(0, -0.5)
hframes = 4

[node name="CarLight" type="PointLight2D" parent="Demo/Car" index="1"]
position = Vector2(24, 11)
range_z_min = -98
range_z_max = 0
range_layer_min = -100
texture = ExtResource("8_7wkh6")
offset = Vector2(133, 0)
texture_scale = 0.25

[node name="PlayerLight" parent="Demo/Car" index="2" instance=ExtResource("9_7jiup")]
position = Vector2(4.264, 4)
energy = 0.3

[node name="Phone" type="Sprite2D" parent="Demo/Car" index="3"]
visible = false
z_index = 2
position = Vector2(2, 4)
texture = ExtResource("10_unopm")
offset = Vector2(-0.5, 0)
vframes = 2

[node name="Road" type="Sprite2D" parent="Demo" index="2"]
z_index = -2
texture_repeat = 2
position = Vector2(135, -8)
texture = ExtResource("11_5u0y3")
region_enabled = true
region_rect = Rect2(0, 0, 270, 16)

[node name="RoadAnimation" type="AnimationPlayer" parent="Demo" index="3"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_cyxue")
}

[node name="HeadAnimation" type="AnimationPlayer" parent="Demo" index="4"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nlf1o")
}

[node name="CarSwayAnimation" type="AnimationPlayer" parent="Demo" index="5"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fqm3t")
}

[node name="Title" type="Sprite2D" parent="." index="2"]
position = Vector2(128, -104)
texture = ExtResource("12_uylm5")

[node name="CutsceneAnimator" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_plauh")
}
script = ExtResource("21_u3b2y")

[node name="RoadSound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("17_ccg6h")
autoplay = true

[node name="EngineSound" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("18_5cawo")
volume_db = -10.0
autoplay = true

[node name="CellphoneRing" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("14_kh8j2")
